--- a/daydreams/index.html
+++ b/daydreams/index.html
@@ -1,42 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-	<meta charset="UTF-8">
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-	 crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="css/all.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/estilos.css">
-	<title>Day-Dream</title>
+<meta charset="UTF-8">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+ crossorigin="anonymous"></script>
+<link rel="stylesheet" href="css/bootstrap.css">
+<link rel="stylesheet" href="css/estilos.css">
+<title>Day-Dream</title>
 </head>
 
 <body>
 	<!--Menu con logotipo-->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-dark bg-dark">
 		<a href="index.html" class="navbar-brand">
 			<img src="img/logo.png" id="logo-menu" alt="">
 		</a>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav justify-content-end">
-				<li class="nav-item">
-					<a href="sonorizacion.html" class="nav-link">Sonorización</a>
-				</li>
-				<li class="nav-item">
-					<a href="iluminacion.html" class="nav-link">Iluminación</a>
-				</li>
-				<li class="nav-item">
-					<a href="eventos.html" class="nav-link">Eventos</a>
-				</li>
-				<li class="nav-item">
-					<a href="estructuras.html" class="nav-link">Estructuras</a>
-				</li>
-				<li class="nav-item">
-					<a href="alquiler.html" class="nav-link">Alquiler</a>
-				</li>
-				<li class="nav-item">
-					<a href="contacto.html" class="nav-link">Contacto</a>
-				</li>
-			</ul>
-		</div>
+		<ul class="nav navbar-bar justify-content-end">
+			<li class="nav-item">
+				<a href="sonorizacion.html" class="nav-link">Sonorización</a>
+			</li>
+			<li class="nav-item">
+				<a href="iluminacion.html" class="nav-link">Iluminación</a>
+			</li>
+			<li class="nav-item">
+				<a href="eventos.html" class="nav-link">Eventos</a>
+			</li>
+			<li class="nav-item">
+				<a href="estructuras.html" class="nav-link">Estructuras</a>
+			</li>
+			<li class="nav-item">
+				<a href="alquiler.html" class="nav-link">Alquiler</a>
+			</li>
+			<li class="nav-item">
+				<a href="contacto.html" class="nav-link">Contacto</a>
+			</li>
+		</ul>
 	</nav>
 
 	<!--Slider con imagenes-->
