--- a/daydreams/index.html
+++ b/daydreams/index.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
- crossorigin="anonymous"></script>
- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/estilos.css">
-<title>Day-Dream</title>
+
+<head>
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+	<meta charset="UTF-8">
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="css/all.css">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/estilos.css">
+	<title>Day-Dream</title>
 </head>
 
 <body>
 	<!--Menu con logotipo-->
-	<nav class="navbar navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a href="index.html" class="navbar-brand">
 			<img src="img/logo.png" id="logo-menu" alt="">
 		</a>
-		<ul class="nav navbar-bar justify-content-end">
-			<li class="nav-item">
-				<a href="sonorizacion.html" class="nav-link">Sonorización</a>
-			</li>
-			<li class="nav-item">
-				<a href="iluminacion.html" class="nav-link">Iluminación</a>
-			</li>
-			<li class="nav-item">
-				<a href="eventos.html" class="nav-link">Eventos</a>
-			</li>
-			<li class="nav-item">
-				<a href="estructuras.html" class="nav-link">Estructuras</a>
-			</li>
-			<li class="nav-item">
-				<a href="alquiler.html" class="nav-link">Alquiler</a>
-			</li>
-			<li class="nav-item">
-				<a href="contacto.html" class="nav-link">Contacto</a>
-			</li>
-		</ul>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+		 aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+			<ul class="navbar-nav ">
+				<li class="nav-item">
+					<a href="sonorizacion.html" class="nav-link">Sonorización</a>
+				</li>
+				<li class="nav-item">
+					<a href="iluminacion.html" class="nav-link">Iluminación</a>
+				</li>
+				<li class="nav-item">
+					<a href="eventos.html" class="nav-link">Eventos</a>
+				</li>
+				<li class="nav-item">
+					<a href="estructuras.html" class="nav-link">Estructuras</a>
+				</li>
+				<li class="nav-item">
+					<a href="alquiler.html" class="nav-link">Alquiler</a>
+				</li>
+				<li class="nav-item">
+					<a href="contacto.html" class="nav-link">Contacto</a>
+				</li>
+			</ul>
+		</div>
 	</nav>
 
 	<!--Slider con imagenes-->
@@ -42,13 +69,13 @@
 		<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="d-block w-100" src="img/slide1.jpeg" width="80%" height="800px" alt="First slide">
+					<img class="d-block w-100" src="img/slide1.jpeg" width="800px" height="700px" alt="First slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="img/slide2.jpeg" width="80%" height="800px" alt="Second slide">
+					<img class="d-block w-100" src="img/slide2.jpeg" width="800px" height="700px" alt="Second slide">
 				</div>
 				<div class="carousel-item">
-					<img class="d-block w-100" src="img/slide3.jpeg" width="80%" height="800px" alt="Third slide">
+					<img class="d-block w-100" src="img/slide3.jpeg" width="800px" height="700px" alt="Third slide">
 				</div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -89,23 +116,22 @@
 	<!--Zona de contacto-->
 	<div class="container-fluid mt-5">
 		<div class="row ">
-			<div class="col-5">
-				<h3 class="titulos">Contactanos</h3>
+			<div class="col-4">
+				<h3 class="text-center">Contactanos</h3>
 				<div class="row contacto">
-					<img src="img/iconos/map.svg" alt="" width="32px" height="32px" class="col-md-4">
-					<p class="col-md-6">Valencia c/Campbell-16</p>
+					<p class="fas fa-map-marker-alt icono-contacto col-md-4 text-center"></p>
+					<p class="col-md-8">Valencia c/Campbell-16</p>
 				</div>
 				<div class="row contacto">
-					<img src="img/iconos/envelope.svg" alt="" width="32px" height="32px" class="col-md-4">
-					<p class="col-md-6">hola@daydreams.com</p>
+					<p class="fas fa-envelope icono-contacto col-md-4 text-center"></p>
+					<p class="col-md-8">hola@daydreams.com</p>
 				</div>
 				<div class="row contacto">
-					<img src="img/iconos/phone.svg" alt="" width="32px" height="32px" class="col-md-4">
-					<p class="col-md-6">+34 666 666 666</p>
+					<p class="fas fa-phone icono-contacto col-md-4 text-center"></p>
+					<p class="col-md-8">+34 666 666 666</p>
 				</div>
-
 			</div>
-			<div class="col-7">
+			<div class="col-8">
 				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12317.39225773755!2d-0.3570695939941404!3d39.484054482261264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1543394602710"
 				 width="80%" height="400" frameborder="0" style="border:0" allowfullscreen class="center"></iframe>
 			</div>
@@ -121,16 +147,15 @@
 			<div class="col-4 m-auto text-center">
 				<p id="copyright">DayDream 2018(R)</p>
 			</div>
-			<div class="col-4 m-auto text-center" id="redes">
-				<div class="row">
-					<div class="col-4 fab fa-facebook-f icono"></div>
-					<div class="col-4 fab fa-twitter icono"></div>
-					<div class="col-4 fab fa-instagram icono"></div>
+			<div class="col-4 m-auto">
+				<div class="row" id="redes">
+					<a class="col-4 fab fa-facebook-f icono-footer" href="https://es-es.facebook.com/"></a>
+					<a class="col-4 fab fa-twitter icono-footer" href="https://twitter.com/?lang=es"></a>
+					<a class="col-4 fab fa-instagram icono-footer" href="https://www.instagram.com/"></a>
 				</div>
 			</div>
 		</div>
 	</div>
-
 	<script src="bootstrap/js/bootstrap.js"></script>
 </body>
 
