--- a/daydreams/sonorizacion.html
+++ b/daydreams/sonorizacion.html
@@ -22,6 +22,8 @@
 	<meta charset="UTF-8">
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	 crossorigin="anonymous"></script>
+	 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="css/all.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/estilos.css">
@@ -38,8 +40,8 @@
 		 aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav justify-content-end">
+		<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+			<ul class="navbar-nav">
 				<li class="nav-item">
 					<a href="sonorizacion.html" class="nav-link">Sonorización</a>
 				</li>
@@ -63,7 +65,7 @@
     </nav>
     
     <!--Galeria de sonorizacion-->
-    <div class="card-group">
+    <div class="card-group mt-5">
         <div class="card">
             <img src="img/sonorizacion/sono1.jpeg" alt="" class="card-img-top">
             <div class="card-body">
@@ -85,48 +87,67 @@
                     <p class="card-text">Esto es una salvajada de equipo</p>
                 </div>
         </div>
-    </div>
+	</div>
+	<div class="card-group mt-3">
+		<div class="card"></div>
+		<div class="card">
+			<img src="img/sonorizacion/sono4.jpeg" alt="" class="card-img-top">
+			<div class="card-body">
+				<h5 class="card-title">Equipos</h5>
+				<p class="card-text">Esto es una salvajada</p>
+			</div>
+		</div>
+		<div class="card"></div>
+		<div class="card">
+			<img src="img/sonorizacion/sono5.jpeg" alt="" class="card-img-top">
+			<div class="card-body">
+				<h5 class="card-title">Tamaño</h5>
+				<p class="card-text">Disponemos de equipos para todo tipo de eventos sin importar el tamaño de este</p>
+			</div>
+		</div>
+		<div class="card"></div>
+	</div>
 
 
     <hr>
 
 	<!--Zona de contacto-->
-	<div class="container-fluid mt-5">
-		<div class="row ">
-			<div class="col-4">
-				<h3>Contactanos</h3>
-				<img src="img/iconos/map.svg" alt="" width="32px" height="32px">
-				<p>Valencia c/Campbell-16</p>
-				<img src="img/iconos/envelope.svg" alt="" width="32px" height="32px"></i>
-				<p>hola@daydreams.com</p>
-				<img src="img/iconos/phone.svg" alt="" width="32px" height="32px">
-				<p>+34 666 666 666</p>
-			</div>
-			<div class="col-8">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12317.39225773755!2d-0.3570695939941404!3d39.484054482261264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1543394602710"
-				 width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
-			</div>
-		</div>
-	</div>
+    <div class="container-fluid mt-5">
+        <h3 class="text-center mb-5">Contactanos</h3>
+        <div class="row ">
+            <div class="col-4 text-center">
+                <p class="fas fa-map-marker-alt icono-contacto mb-3"></p>
+                <p>Valencia c/Campbell-16</p>
+            </div>
+            <div class="col-4 text-center">
+                <p class="fas fa-envelope icono-contacto mb-3"></p>
+                <p>hola@daydreams.com</p>
+            </div>
+            <div class="col-4 text-center">
+                <p class="fas fa-phone icono-contacto mb-3"></p>
+                <p>+34 666 666 666</p>
+            </div>
+        </div>
+    </div>
 
 	<!--Footer-->
-	<div class="container-fluid navbar-dark mt-5" id="footer">
-		<div class="row">
-			<div class="col-4">
-				<img src="img/logo.png" id="logo-footer" alt="">
-			</div>
-			<div class="col-4 m-auto">
-				<p>DayDreams 2018(R)</p>
-			</div>
-			<div class="col-4 m-auto" id="redes">
-				<div class="row">
-					<div class="col-4"><a href="#">Face</a></div>
-					<div class="col-4">twitter</div>
-					<div class="col-4">insta</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container-fluid navbar-dark mt-5">
+        <div class="row footer">
+            <div class="col-4 m-auto">
+                <img src="img/logo.png" id="logo-footer" alt="">
+            </div>
+            <div class="col-4 m-auto text-center">
+                <p id="copyright">DayDream 2018(R)</p>
+            </div>
+            <div class="col-4 m-auto">
+                <div class="row" id="redes">
+                    <a class="col-4 fab fa-facebook-f icono-footer" href="https://es-es.facebook.com/"></a>
+                    <a class="col-4 fab fa-twitter icono-footer" href="https://twitter.com/?lang=es"></a>
+                    <a class="col-4 fab fa-instagram icono-footer" href="https://www.instagram.com/"></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 	<script src="bootstrap/js/bootstrap.js"></script>
 </body>
